--- a/css/grid.css
+++ b/css/grid.css
@@ -207,7 +207,9 @@
 		justify-content: center;
 		height: 150px;
 	}
-
+	.bar-icon {
+		display: block;
+	}
 }
 @media (min-width: 992px) {
 	.row {
